--- a/01_agama/madhyama/MA_003.md
+++ b/01_agama/madhyama/MA_003.md
@@ -10,140 +10,140 @@ next: MA_004.html
 ## Chapter 1: Sevens
 ### 3. The City Parable
 
-1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {: #p1}
 
 #### A King’s Border City
 
-2\. It was then that the Bhagavān addressed the monks, “Suppose a king’s border city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. Because of this, that king’s city is not defeated by external enemies but only by internal sabotage.
+2\. It was then that the Bhagavān addressed the monks, “Suppose a king’s border city is supplied with seven things and has an abundance of four foods that are easy and not difficult to obtain. Because of this, that king’s city won’t be defeated by external enemies but only by internal sabotage.
 {: #p2}
 
-3\. “What are the seven things with which the king’s border city is fully endowed? It means the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. This is called the first thing with which the king’s city is fully endowed.
+3\. “What are the seven things with which that king’s border city is supplied? The king’s border city erects a tower, building it on ground that makes it sturdy and indestructible. Those inside the city are made secure, and external enemies are kept at bay. This is called the first thing with which the king’s city is supplied.
 {: #p3}
 
-4\. “Furthermore, suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and external enemies are kept at bay. This is called the second thing with which the king’s city is fully endowed.
+4\. “Furthermore, suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside the city are made secure, and external enemies are kept at bay. This is called the second thing with which the king’s city is supplied.
 {: #p4}
 
-5\. “Furthermore, suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside are made secure, and external enemies are kept at bay. This is called the third thing with which the king’s city is fully endowed.
+5\. “Furthermore, suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside the city are made secure, and external enemies are kept at bay. This is called the third thing with which the king’s city is supplied.
 {: #p5}
 
-6\. “Furthermore, suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside are made secure, and external enemies are kept at bay. This is called the fourth thing with which the king’s city is fully endowed.
+6\. “Furthermore, suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside the city are made secure, and external enemies are kept at bay. This is called the fourth thing with which the king’s city is supplied.
 {: #p6}
 
-7\. “Furthermore, suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside are made secure, and external enemies are kept at bay. This is called the fifth thing with which the king’s city is fully endowed.
+7\. “Furthermore, suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside the city are made secure, and external enemies are kept at bay. This is called the fifth thing with which the king’s city is supplied.
 {: #p7}
 
-8\. “Furthermore, suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and external enemies are kept at bay. This is called the sixth thing with which the king’s city is fully endowed.
+8\. “Furthermore, suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside the city are made secure, and external enemies are kept at bay. This is called the sixth thing with which the king’s city is supplied.
 {: #p8}
 
-9\. “Furthermore, suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside are made secure, and external enemies are kept at bay. This is called the seventh thing with which the king’s city is fully endowed.
+9\. “Furthermore, suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside the city are made secure, and external enemies are kept at bay. This is called the seventh thing with which the king’s city is supplied.
 {: #p9}
 
-10\. “What is the abundance of four foods in the king’s city, which are easy and not difficult to obtain? It means the king’s border city provides for a reserve of water, hay, [423a] and firewood. Those inside are made secure, and external enemies are kept at bay. This is called the first abundance of food in the king’s city, which is easy and not difficult to obtain.
+10\. “Which four foods are abundant in that king’s city, which are easy and not difficult to obtain? The king’s border city provides for a reserve of water, hay, [423a] and firewood. Those inside the city are made secure, and external enemies are kept at bay. This is called the first food that’s abundant in the king’s city, which is easy and not difficult to obtain.
 {: #p10}
 
-11\. “Furthermore, suppose the king’s border city collects much rice and stockpiles barley. Those inside are made secure, and external enemies are kept at bay. This is called the second abundance of food in the king’s city, which is easy and not difficult to obtain.
+11\. “Furthermore, suppose the king’s border city harvests much rice and stockpiles barley. Those inside the city are made secure, and external enemies are kept at bay. This is called the second food that’s abundant in the king’s city, which is easy and not difficult to obtain.
 {: #p11}
 
-12\. “Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.[\[2\]](#n2){: #ref2} Those inside are made secure, and external enemies are kept at bay. This is called the third abundance of food in the king’s city, which is easy and not difficult to obtain.
+12\. “Furthermore, suppose the king’s border city stockpiles calabash beans, green grams, and lentils.[\[2\]](#n2){: #ref2} Those inside the city are made secure, and external enemies are kept at bay. This is called the third food that’s abundant in the king’s city, which is easy and not difficult to obtain.
 {: #p12}
 
-13\. “Furthermore, suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside are made secure, and external enemies are kept at bay. This is called the fourth abundance of food in the king’s city, which is easy and not difficult to obtain.
+13\. “Furthermore, suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside the city are made secure, and external enemies are kept at bay. This is called the fourth food that’s abundant in the king’s city, which is easy and not difficult to obtain.
 {: #p13}
 
-14\. “Thus, the king’s city is fully endowed with seven things and has an abundance of four foods that are easy and not difficult to obtain. It’s not defeated by external enemies but only by internal sabotage.
+14\. “Thus, the king’s city is supplied with seven things and has an abundance of four foods that are easy and not difficult to obtain. It won’t be defeated by external enemies but only by internal sabotage.
 {: #p14}
 
 #### The Noble Disciple
 
-15\. “Thus, suppose a noble disciple also attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. Because of this, King Māra doesn’t get an advantage over him, and the noble disciple doesn’t follow bad and unwholesome things. Not being stained by defilements, he’ll no longer be subject to birth.
+15\. “Thus, suppose a noble disciple also attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. Because of this, King Māra won’t get an advantage over him, and the noble disciple doesn’t follow bad and unskillful things. Not being stained by defilements, he’ll no longer be subject to birth.
 {: #p15}
 
 16\. “What are the seven good qualities attained by the noble disciple? It means the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside ascetics and priests,[\[3\]](#n3){: #ref3} nor gods, Māra, Brahmā, or any other worldly being. This is called the first good quality attained by the noble disciple.
 {: #p16}
 
-17\. “Furthermore, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the second good quality attained by the noble disciple.
+17\. “Furthermore, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unskillful qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the second good quality attained by the noble disciple.
 {: #p17}
 
-18\. “Furthermore, the noble disciple always conducts himself with modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the third good quality attained by the noble disciple.
+18\. “Furthermore, the noble disciple always conducts himself with modesty. Being modest, he knows the embarrassment of bad and unskillful qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the third good quality attained by the noble disciple.
 {: #p18}
 
-19\. “Furthermore, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the fourth good quality attained by the noble disciple.
+19\. “Furthermore, the noble disciple always conducts himself with energy. He stops what’s bad and unskillful and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the fourth good quality attained by the noble disciple.
 {: #p19}
 
-20\. “Furthermore, the noble disciple widely learns and is well-versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the fifth good quality attained by the noble disciple.
+20\. “Furthermore, the noble disciple widely learns and is well-versed. He retains, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its content and expression perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the fifth good quality attained by the noble disciple.
 {: #p20}
 
 21\. “Furthermore, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago [423b] and what was heard long ago. This is called the sixth good quality attained by the noble disciple.
 {: #p21}
 
-22\. “Furthermore, the noble disciple cultivates wisdom. He contemplates the law of arising and decay, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the seventh good quality attained by the noble disciple.
+22\. “Furthermore, the noble disciple cultivates wisdom. He observes the law of rise and decline and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the seventh good quality attained by the noble disciple.
 {: #p22}
 
-23\. “How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? It means the noble disciple parts with desire and parts with bad and unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+23\. “How does a noble disciple acquire four progressive mental states, which are easy and not difficult to attain? The noble disciple parts with desire and bad and unskillful things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first dhyāna. This is called the first progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p23}
 
-24\. “Furthermore, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he acquires the accomplishment of the second meditation. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+24\. “Furthermore, once perception and contemplation have stopped, the noble disciple has an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he acquires the accomplishment of the second dhyāna. This is called the second progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p24}
 
-25\. “Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the noble ones as the noble’s equanimity, mindfulness, happy abiding, and emptiness. He acquires the accomplishment of the third meditation. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+25\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as the noble equanimity, mindfulness, happy abiding, and emptiness, and he acquires the accomplishment of the third dhyāna. This is called the third progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p25}
 
-26\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
+26\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth dhyāna. This is called the fourth progressive mental state acquired by the noble disciple, which is easy and not difficult to attain.
 {: #p26}
 
-27\. “Thus does the noble disciple attain seven good qualities and acquire four progressive mental states that are easy and not difficult to attain. King Māra doesn’t get an advantage over him, and he doesn’t follow bad and unwholesome things. Not being stained by defilements, he’ll no longer be subject to birth.
+27\. “Thus, the noble disciple attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. King Māra won’t get an advantage over him, and he doesn’t follow bad and unskillful things. Not being stained by defilements, he’ll no longer be subject to birth.
 {: #p27}
 
 #### The Noble Disciple Is Like the King’s Border City
 
-28\. “Suppose the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside ascetics and priests, nor gods, Māra, Brahmā, or any other worldly being. This is called the noble disciple attaining the tower of faith, which removes what’s bad and unwholesome and cultivates good qualities.
+28\. “Suppose the king’s border city erects a tower, building it on ground that makes it sturdy and indestructible. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once the faculty of faith is established, he will never follow outside ascetics and priests, nor gods, Māra, Brahmā, or any other worldly being. This is called the noble disciple attaining the tower of faith, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p28}
 
-29\. “Suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the moat of conscience, which removes what’s bad and unwholesome and cultivates good qualities.
+29\. “Suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unskillful qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the moat of conscience, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p29}
 
-30\. “Suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with [423c] modesty. Being modest, he knows the embarrassment of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the level road of modesty, which removes what’s bad and unwholesome and cultivates good qualities.
+30\. “Suppose the king’s border city makes a path around it that’s cleared, level, and wide. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with [423c] modesty. Being modest, he knows the embarrassment of bad and unskillful qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the level road of modesty, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p30}
 
-31\. “Suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with energy. He stops what’s bad and unwholesome and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the noble disciple attaining the army of energy, which removes what’s bad and unwholesome and cultivates good qualities.
+31\. “Suppose the king’s border city gathers a fourfold army of elephant troops, horse troops, chariot troops, and foot troops. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with energy. He stops what’s bad and unskillful and cultivates good qualities. He constantly motivates himself to be focused and resolute, making roots of goodness and not abandoning the effort. This is called the noble disciple attaining the army of energy, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p31}
 
-32\. “Suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple widely learns and is well-versed. He memorizes, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its meanings and expressions perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the noble disciple attaining the armaments of being well-versed, which remove what’s bad and unwholesome and cultivate good qualities.
+32\. “Suppose the king’s border city prepares armaments, such as bows, arrows, spears, and pikes. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple widely learns and is well-versed. He retains, doesn’t forget, and accumulates extensive learning about the Dharma that’s good in the beginning, good in the middle, and good in the end. Its content and expression perfectly and purely present the religious practice. He widely learns and is well-versed in such things. He recites them up to a thousand times, investigates them in his mind, and deeply penetrates them with clear vision. This is called the noble disciple attaining the armaments of being well-versed, which remove what’s bad and unskillful and cultivate good qualities.
 {: #p32}
 
-33\. “Suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago and what was heard long ago. This is called the noble disciple attaining the commander of mindfulness that guards the entrances, which removes what’s bad and unwholesome and cultivates good qualities.
+33\. “Suppose the king’s border city appoints a commander to guard its entrances who is resourceful, intelligent, courageous, and shrewd. He permits those who are good to enter and bars those who are not good. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself with mindfulness. He accomplishes right mindfulness, always recollecting and not forgetting what was practiced long ago and what was heard long ago. This is called the noble disciple attaining the commander of mindfulness that guards the entrances, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p33}
 
-34\. “Suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple cultivates wisdom. He contemplates the law of arising and decay, attaining the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the noble disciple attaining the wall of wisdom, which removes what’s bad and unwholesome and cultivates good qualities.
+34\. “Suppose the king’s border city builds a high wall, making it quite strong and coating it with whitewash. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple cultivates wisdom. He observes the law of rise and decline and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is called the noble disciple attaining the wall of wisdom, which removes what’s bad and unskillful and cultivates good qualities.
 {: #p34}
 
-35\. “Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with desire and parts with bad or unwholesome things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+35\. “Suppose the king’s border city provides for a reserve of water, hay, and firewood. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with desire and bad and unskillful things. With perception and contemplation, this seclusion produces joy and happiness, and he acquires the accomplishment of the first dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p35}
 
-36\. “Suppose the king’s border city harvests much rice and stockpiles barley. Those inside are made secure, and external enemies are kept at bay. Thus, once the noble disciple’s perception and contemplation have stopped, he possesses an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and [424a] happiness, and he acquires the accomplishment of the second meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+36\. “Suppose the king’s border city harvests much rice and stockpiles barley. Those inside the city are made secure, and external enemies are kept at bay. Thus, once perception and contemplation have stopped, the noble disciple has an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and [424a] happiness, and he acquires the accomplishment of the second dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p36}
 
-37\. “Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness which is described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He acquires the accomplishment of the third meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
+37\. “Suppose the king’s border city stockpiles calabash beans, green grams, and lentils. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as the noble equanimity, mindfulness, happy abiding, and emptiness, and he acquires the accomplishment of the third dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.
 {: #p37}
 
-38\. “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth meditation. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.”
+38\. “Suppose the king’s border city stores butter, oil, honey, sugarcane, syrup, fish, salt, and dried meat, all of which are plentiful. Those inside the city are made secure, and external enemies are kept at bay. Thus, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he acquires the accomplishment of the fourth dhyāna. He lives happily without want. Secure and happy, he brings about nirvāṇa naturally.”
 {: #p38}
 
-39\. The Buddha spoke thus. The monks who heard what the Buddha taught rejoiced and approved.
+39\. Thus did the Buddha speak. The monks who heard what the Buddha taught rejoiced and approved.
 {: #p39}
 
 ### Notes
 
 1. {:#n1} Parallels include [AN 7.67](https://suttacentral.net/an7.67){: target="_blank"} and [EA 39.4](https://suttacentral.net/ea39.4){: target="_blank"}. [\[Back\]](#ref1)
 2. {:#n2} *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#ref2)
-3. {:#n3} *outside ascetics and priests*. “Outside” means those who belonged to others sects and philosophies that did follow the Buddha’s teaching. [\[Back\]](#ref3)
+3. {:#n3} *outside ascetics and priests*. “Outside” means those who belonged to others religions and philosophies that did follow the Buddha’s teaching. [\[Back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 16 February 2021
 {: .revised}
 
 ---
