--- a/02_avadana/dharmapada/T211/T211c1v1-2.md
+++ b/02_avadana/dharmapada/T211/T211c1v1-2.md
@@ -4,7 +4,7 @@ title: 'Dharma Verse Stories | 1. Impermanence | 1. Śakra Attains Stream Entry'
 type: kramdown
 base: ../../../
 previous: index.html
-next: SA1_2.html
+next: T211c1v3.html
 ---
 
 # [Dharma Verse Stories](index.html)
