--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -10,7 +10,7 @@ next: MA_006.html
 ## Chapter 1: Sevens
 ### 5. The Wood Pile Parable
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala and was among the people there. He traveled with an assembly of great monks and followers.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Kośala and stayed among the people there. He traveled with a large assembly of monks and followers.
 {: #p1}
 
 2\. It was then that the Bhagavān suddenly saw from the road a place where there was a large wood pile engulfed in flames.[\[2\]](#n2){:#ref2} After he saw this, the Bhagavān went down to the side of the road, spread out his sitting mat by a tree, and sat down cross-legged.
@@ -23,22 +23,22 @@ next: MA_006.html
 
 The monks then answered, “We see it, Bhagavān!”
 
-4\. The Bhagavān again addressed the monks, “What do you think? Suppose you were to embrace, sit, or lie with that large wood pile engulfed in flames. Suppose it were an warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, and you were to embrace, sit, or lie down with her. Which would be pleasant?”
+4\. The Bhagavān again addressed the monks, “What do you think? Suppose you were to embrace, sit, or lay with that large wood pile engulfed in flames. Suppose there were a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, and you were to embrace, sit, or lay down with her. Which would be pleasant?”
 {: #p4}
 
-5\. The monks then said, “Bhagavān, that large wood pile is engulfed in flames. If we embraced, sat, or lie with it, that would be very painful. Bhagavān, suppose it were a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry. To embrace, sit, or lie with her would be very pleasant, Bhagavān.”
+5\. The monks then said, “Bhagavān, that large wood pile is engulfed in flames! If we embraced, sat, or lay with it, it would be very painful. Bhagavān, suppose there were a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry. To embrace, sit, or lay with her would be very pleasant, Bhagavān.”
 {: #p5}
 
-[425b] 6\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lie down there, even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+[425b] 6\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lay down there even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p6}
 
-7\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+7\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p7}
 
-8\. “Suppose he were to embrace an warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, or suppose he were to sit or lie down with her. That foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+8\. “Suppose he were to embrace a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, or suppose he were to sit or lay down with her. That foolish man’s long night will be neither good nor purposeful as a result, which brings the result of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p8}
 
-9\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+9\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p9}
 
 #### 2. The Hair Rope and the Massage
@@ -46,19 +46,19 @@ The monks then answered, “We see it, Bhagavān!”
 10\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who tightly wraps a cord of hair rope around your calf and twists it until it cuts your skin. After cutting skin, it cuts your flesh. After cutting flesh, it cuts your tendons. After cutting tendons, it cuts your bone. After cutting bone, it reaches your marrow and stops. Suppose you were to accept a faithful gift from a warrior, priest, householder, or worker who massages your body, limbs, hands, and feet. Which would be pleasant?”
 {: #p10}
 
-11\. The monks then said, “Bhagavān, if a strong man tightly wrapped a cord of hair rope around our calves and twisted it until it cut our skin, cut our flesh after cutting skin, cut our tendons after cutting flesh, cut our bones after cutting tendons, cut our marrow after cutting bones, and stopped, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who massages our body, limbs, hands, and feet. That would be very pleasant, Bhagavān.”
+11\. The monks then said, “Bhagavān, if a strong man tightly wrapped a cord of hair rope around our calves and twisted it until it cut our skin, and it cuts our flesh after cutting skin, cuts our tendons after cutting flesh, cuts our bones after cutting tendons, cuts our marrow after cutting bones, and stops, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who massages our body, limbs, hands, and feet. That would be very pleasant, Bhagavān.”
 {: #p11}
 
-12\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or [425c] be born in hell after your body breaks up and your life ends.
+12\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or [425c] be born in hell after your body breaks up and your life ends.
 {: #p12}
 
-13\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+13\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p13}
 
-14\. “Accepting a faithful gift from an warrior, priest, householder, or worker who massages his body, limbs, hands, and feet, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+14\. “Accepting a faithful gift from a warrior, priest, householder, or worker who massages his body, limbs, hands, and feet, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p14}
 
-15\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+15\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p15}
 
 #### 3. The Sword and Veneration
@@ -69,102 +69,102 @@ The monks then answered, “We see it, Bhagavān!”
 17\. The monks then said, “Bhagavān, if a strong man used a brightly polished and sharpened sword to chop off our [leg at the] hip, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after us. That would be very pleasant, Bhagavān.”
 {: #p17}
 
-18\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+18\. The Bhagavān told them, “I will explain this for you, so you trainees will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p18}
 
-19\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+19\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p19}
 
-20\. “Accepting a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after him, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+20\. “Accepting a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after him, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p20}
 
-21\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+21\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p21}
 
 #### 4. The Hot Iron Sheet and Clothing
 
-22\. The Bhagavān again addressed the monks, [426a] “What do you think? Suppose there’s a strong man who wraps an iron or copper sheet that’s both glowing and flaming around your body. Suppose you were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. Which would be pleasant?”
+22\. The Bhagavān again addressed the monks, [426a] “What do you think? Suppose there’s a strong man who wraps a metal sheet that’s glowing and flaming hot around your body. Suppose you were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. Which would be pleasant?”
 {: #p22}
 
-23\. The monks then said, “Bhagavān, if a strong man wrapped an iron or copper sheet that’s both glowing and flaming around our bodies, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
+23\. The monks then said, “Bhagavān, if a strong man wrapped a metal sheet that’s glowing and flaming hot around our bodies, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p23}
 
-24\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap an iron or copper sheet that’s both glowing and flaming around your body. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+24\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap a metal sheet that’s glowing and flaming hot around your body. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p24}
 
-25\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+25\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p25}
 
-26\. “Accepting a faithful gift of clothing from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+26\. “Accepting a faithful gift of clothing from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p26}
 
-27\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+27\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p27}
 
 #### 5. The Hot Iron Ball and Delicious Meal
 
-28\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who opens your mouth with hot iron forceps and then puts in an iron ball that’s both glowing and flaming. That hot iron ball burns your lips. After it burns your lips, it burns your tongue. After it burns your tongue, it burns your gums. After it burns your gums, it burns your throat. After it burns your throat, it burns your heart. After it burns your heart, it burns your intestines and stomach. After it burns your intestines and stomach, it falls through [to the ground]. Suppose you were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. Which would be pleasant?”
+28\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who opens your mouth with hot iron forceps and then puts in it an iron ball that’s glowing and flaming hot. That hot iron ball burns your lips. After it burns your lips, it burns your tongue. After it burns your tongue, it burns your gums. After it burns your gums, it burns your throat. After it burns your throat, it burns your heart. After it burns your heart, it burns your intestines and stomach. After it burns your intestines and stomach, it falls through [to the ground]. Suppose you were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. Which would be pleasant?”
 {: #p28}
 
-29\. The monks then said, “Bhagavān, if a strong man opened our mouths with hot iron forceps and then put in an iron ball that’s both glowing and flaming, that hot iron ball would burn our lips. After it burns our lips, it would burn our tongue. After it burns our tongue, it would burn our gums. After it burns our gums, it would burn our throat. After it burns our throat, it would burn our heart. After it burns our heart, it would burn our intestines and stomach. After it burns our intestines and stomach, [426b] it would fall through [to the ground]. That would be very painful. Bhagavān, suppose we were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
+29\. The monks then said, “Bhagavān, if a strong man opened our mouths with hot iron forceps and then put in it an iron ball that’s glowing and flaming hot, that hot iron ball would burn our lips. After it burns our lips, it would burn our tongue. After it burns our tongue, it would burn our gums. After it burns our gums, it would burn our throat. After it burns our throat, it would burn our heart. After it burns our heart, it would burn our intestines and stomach. After it burns our intestines and stomach, [426b] it would fall through [to the ground]. That would be very painful! Bhagavān, suppose we were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p29}
 
-30\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in an iron ball that’s both glowing and flaming. That hot iron ball will burn your lips. After burning your lips, it will burn your tongue. After burning your tongue, it will burn your gums. After burning your gums, it will burn your throat. After burning your throat, it will burn your heart. After burning your heart, it will burn your intestines and stomach. After burning your intestines and stomach, it will fall through [to the ground]. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+30\. The Bhagavān told them, “I will explain this for you, so you trainees don’t lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in it an iron ball that’s glowing and flaming hot. That hot iron ball will burn your lips. After burning your lips, it will burn your tongue. After burning your tongue, it will burn your gums. After burning your gums, it will burn your throat. After burning your throat, it will burn your heart. After burning your heart, it will burn your intestines and stomach. After burning your intestines and stomach, it will fall through [to the ground]. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p30}
 
-31\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things.  His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+31\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p31}
 
-32\. “Accepting a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+32\. “Accepting a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p32}
 
-33\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+33\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p33}
 
 #### 6. The Hot Iron Bed and the Sofa
 
-34\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who forces a servant to sit or lie on an iron or copper bed that’s both glowing and flaming. Suppose you were to accept a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker. Which would be pleasant?
+34\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who forces you to sit or lay on a metal bed that’s glowing and flaming hot. Suppose you were to accept a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker. Which would be pleasant?
 {: #p34}
 
-35\. The monks then said, “Bhagavān, if a strong man forced a servant to sit or lie on an iron or copper bed that’s both glowing and flaming, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
+35\. The monks then said, “Bhagavān, if a strong man forced us sit or lay on a metal bed that’s glowing and flaming hot, that would be very painful! Bhagavān, suppose we were to accept a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p35}
 
-36\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to force a servant to sit or lie down on an iron or copper bed that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place [426c] or be born in hell after your body breaks up and your life ends.
+36\. The Bhagavān told them, “I will explain this for you, so you trainees will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to force you to sit or lay on a metal bed that’s glowing and flaming hot. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place [426c] or be born in hell after your body breaks up and your life ends.
 {: #p36}
 
-37\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+37\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p37}
 
-38\. “Accepting a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+38\. “Accepting a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p38}
 
-39\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+39\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p39}
 
 #### 7. The Hot Caldron and the Private Dwelling
 
-40\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who picks up a person and puts them headfirst into a large iron or copper cauldron that’s both glowing and flaming. Suppose you were to accept the faithful gift of a dwelling from a warrior, priest, householder, or worker, and it’s coated with whitewash, its windows and doors are secure and private, and it has a fireplace for warmth. Which would be pleasant?”
+40\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who picks you up and puts you headfirst into a large metal cauldron that’s glowing and flaming hot. Suppose you were to accept the faithful gift of a dwelling from a warrior, priest, householder, or worker, and it’s coated with whitewash, its windows and doors are secure, and it has a fireplace for warmth. Which would be pleasant?”
 {: #p40}
 
-41\. The monks then said, “Bhagavān, if a strong man picked up a person and put them headfirst into a large iron or copper caldron that’s both glowing and flaming, that would be very painful. Bhagavān, suppose we were to accept the faithful gift of a dwelling from a warrior, priest, householder, or worker, and it’s coated with whitewash, its windows and doors are secure and private, and it has a fireplace for warmth. That would be very pleasant, Bhagavān.”
+41\. The monks then said, “Bhagavān, if a strong man picked us up and put us headfirst into a large metal caldron that’s glowing and flaming hot, that would be very painful! Bhagavān, suppose we were to accept the faithful gift of a dwelling from a warrior, priest, householder, or worker, and it’s coated with whitewash, its windows and doors are secure, and it has a fireplace for warmth. That would be very pleasant, Bhagavān.”
 {: #p41}
 
-42\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to pick up a person and put them headfirst into a large iron or copper caldron that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+42\. The Bhagavān told them, “I will explain this for you, so you trainees will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to pick you up and put you headfirst into a large metal caldron that’s glowing and flaming hot. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p42}
 
-43\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
+43\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unskillful situations. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p43}
 
-44\. “Accepting a faithful gift of a dwelling from a warrior, priest, householder, or worker, which is coated with whitewash, has doors and windows that are secure and private, and has a fireplace for warmth, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
+44\. “Accepting a faithful gift of a dwelling from a warrior, priest, householder, or worker, which is coated with whitewash, has doors and windows that are secure, and has a fireplace for warmth, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad qualities. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
 {: #p44}
 
-45\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in [427a] good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ You must perform your training.”
+45\. “Therefore, all of you must examine your own goal, examine the goals of others, and examine the goals of both. You must think, ‘My training as a renunciant is neither in vain nor empty; it has its fruit and its result. There is an utmost happiness, birth in [427a] good places, and attainment of a long life. I accept the faithful gifts of others for clothing, food and drink, bed and bedding, and bathing and medicine. It will cause my benefactors to obtain great fortune, obtain great rewards, and obtain great radiance.’ Train yourselves in this way.”
 {: #p45}
 
-46\. When he spoke this teaching, the contaminants ended for 60 monks, and they were freed from the bonds. 60 monks renounced the precepts and returned home. Why is that? The Bhagavān’s instructions were extremely profound and difficult. The path of training was also extremely profound and difficult.
+46\. When he spoke this teaching, the contaminants ended for 60 monks, and they were freed from the bonds. 60 monks renounced the precepts and returned home. Why is that? The Bhagavān’s instructions were too profound and difficult, and so was the path of training.
 {: #p46}
 
-47\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
+47\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p47}
 
 ### Notes
@@ -175,7 +175,7 @@ The monks then answered, “We see it, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 25 February 2021
 {: .revised}
 
 ---
