Added DA 11, 12, and 22.

--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -3,8 +3,8 @@ layout: default
 title: The Long Discourses | 21. Brahmā’s Shaking
 type: kramdown
 base: ../../
-previous: index.html
-next: DA_27.html
+previous: DA_12.html
+next: DA_22.html
 ---
 # [The Long Discourses](index.html)
 ### 21. Brahmā’s Shaking
