Corrections to DA 12.

--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -21,7 +21,7 @@ The monks then accepted the teaching and listened.
 3\. The Buddha addressed the monks, “These three categories are one thing that leads to bad destinies, one thing that leads to good destinies, and one thing that leads to Nirvāṇa.
 {:#p3}
 
-4\. “What’s one thing that leads to bad destinies? It’s the absence of kindness that harbors of harmful thoughts. This is one thing that leads to bad destinies.
+4\. “What’s one thing that leads to bad destinies? It’s the absence of kindness that harbors harmful thoughts. This is one thing that leads to bad destinies.
 {:#p4}
 
 5\. “What’s one thing that leads to good destinies? It’s not inflicting bad intent on sentient beings. This is one thing that leads to good destinies.
