--- a/01_agama/dirgha/DA_12.md
+++ b/01_agama/dirgha/DA_12.md
@@ -69,7 +69,7 @@ The monks then accepted the teaching and listened.
 19\. “Again, there are five things that lead to bad destinies, five things that lead to good destinies, and five things that lead to Nirvāṇa.
 {:#p19}
 
-20\. “What are five things that lead to bad destinies? They are breaking the five precepts: killing, stealing, sexual misconduct, lying, and drinking alcohol.
+20\. “What are five things that lead to bad destinies? They are breaking the five precepts: killing, stealing, adultery, lying, and drinking alcohol.
 {:#p20}
 
 21\. “What are five things that lead to good destinies? They are observing the five precepts: Not killing, not stealing, not committing adultery, not being deceptive, and not drinking alcohol.
@@ -93,7 +93,7 @@ The monks then accepted the teaching and listened.
 27\. “Again, there are seven things that lead to bad destinies, seven things that lead to good destinies, and seven things that lead to Nirvāṇa.
 {:#p27}
 
-28\. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, sexual misconduct, lying, divisiveness, harsh speech, and flattery.
+28\. “What are seven things that lead to bad destinies? They are killing beings, taking what’s not given, adultery, lying, divisiveness, harsh speech, and flattery.
 {:#p28}
 
 29\. “What are seven things that lead to good destinies? Not killing beings, not stealing, not committing adultery, not being deceptive, not being divisive, not speaking harshly, and not flattering.
@@ -129,10 +129,10 @@ The monks then accepted the teaching and listened.
 39\. “Again, there are ten things that lead to bad destinies, ten things that lead to good destinies, and ten things that lead to Nirvāṇa.
 {:#p39}
 
-40\. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and engaging in sexual misconduct, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.
+40\. “What are ten things that lead to bad destinies? They are the ten unskillful [actions]: Physically killing, stealing, and committing adultery, verbally being divisive, abusive, lying, and flattering, and mentally being covetous, jealous, and having wrong views.
 {:#p40}
 
-41\. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or engaging in sexual misconduct, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.
+41\. “What are ten things that lead to good destinies? They are the ten skillful actions: Physically not killing, stealing, or committing adultery, verbally not being divisive, abusive, lying, or flattering, and mentally not being covetous, jealous, or having wrong views.
 {:#p41}
 
 42\. “What are ten things that lead to Nirvāṇa? They are the ten straight paths: right view, right intent, right speech, right action, right livelihood, right method, right mindfulness, right concentration, right liberation, and right knowledge.
@@ -148,7 +148,7 @@ The monks then accepted the teaching and listened.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 28 February 2021
+Last Revised: 4 March 2021
 {: .revised}
 
 ---
